--- a/popo.html
+++ b/popo.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <form action='formu.php' method='POST'>
-<input type='text' name='kk' /><input type='submit'>Enviar</input>
+<input type='text' name='kk' /><input type='submit'></input>
 </form>
 </body>
 </html>
