cambiado nombre ariketatabla

--- a/ariketa.html
+++ b/ariketa.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-	<form action="ariketa.php" method="POST">
+	<form action="ariketatabla.php" method="POST">
 		<input type="text" name="num"/>
 		<input type="submit">
 	</form>
